fix header colours that were not working in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #0a0a0a !important;
     --foreground: #ededed;
   }
 }
@@ -23,4 +23,13 @@ body {
   background-color: var(--background, #fff);
   color: var(--foreground, #000);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), transparent);
+}
+@media (prefers-color-scheme: dark) {
+  header {
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), transparent);
+  }
 }
